; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_render_filter_bypass.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_render_filter_bypass.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*)* @render_filter_bypass to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @render_filter_bypass(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i32* @gs_effect_get_technique(i32* %10, i8* %11)
  store i32* %12, i32** %7, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = call i64 @gs_technique_begin(i32* %13)
  store i64 %14, i64* %8, align 8
  store i64 0, i64* %9, align 8
  br label %15

15:                                               ; preds = %27, %3
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* %8, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %30

19:                                               ; preds = %15
  %20 = load i32*, i32** %7, align 8
  %21 = load i64, i64* %9, align 8
  %22 = call i32 @gs_technique_begin_pass(i32* %20, i64 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @obs_source_video_render(i32* %23)
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @gs_technique_end_pass(i32* %25)
  br label %27

27:                                               ; preds = %19
  %28 = load i64, i64* %9, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %9, align 8
  br label %15

30:                                               ; preds = %15
  %31 = load i32*, i32** %7, align 8
  %32 = call i32 @gs_technique_end(i32* %31)
  ret void
}

declare dso_local i32* @gs_effect_get_technique(i32*, i8*) #1

declare dso_local i64 @gs_technique_begin(i32*) #1

declare dso_local i32 @gs_technique_begin_pass(i32*, i64) #1

declare dso_local i32 @obs_source_video_render(i32*) #1

declare dso_local i32 @gs_technique_end_pass(i32*) #1

declare dso_local i32 @gs_technique_end(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
